chore: update document title to pi-carplay

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
-    <title>Carplay</title>
+    <title>pi-carplay</title>
     <style>
       html, body, #root, #main, #videoContainer {
         margin: 0;
